ConsultingHub/force-app/main/default/objects/Engagement_Product_Feature__c/Engagement_Product_Feature__c.object-meta.xml
<CustomObject>
    <label>Engagement Product Feature</label>
    <nameField>
        <displayFormat>EPF-{00000000}</displayFormat>
        <label>Engagement Product Feature Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Product Features</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>