ConsultingHub/force-app/main/default/objects/Engagement_Product_Feature__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <label>Engagement</label>
    <referenceTo>ia_Engagement__c</referenceTo>
    <relationshipLabel>Engagement Product Features</relationshipLabel>
    <relationshipName>Engagement_Product_Features</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>