ConsultingHub/force-app/main/default/objects/Engagement_Product_Feature__c/fields/Engagement_Product_Feature_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Product_Feature_External_Id__c</fullName>
    <description>Format of external id is Product_Feature__c+Engagement__c</description>
    <externalId>true</externalId>
    <inlineHelpText>Format of external id is Product_Feature__c+Engagement__c</inlineHelpText>
    <label>Engagement Product Feature External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>