ConsultingHub/force-app/main/default/objects/Engagement_Product_Feature__c/fields/Product_Area__c.field-meta.xml
<CustomField>
    <fullName>Product_Area__c</fullName>
    <formula>TEXT( Product_Feature__r.Product_Area__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Area</label>
    <type>Text</type>
</CustomField>