ConsultingHub/force-app/main/default/objects/Engagement_Product_Feature__c/fields/Product_Feature__c.field-meta.xml
<CustomField>
    <fullName>Product_Feature__c</fullName>
    <label>Product Feature</label>
    <referenceTo>Product_Feature__c</referenceTo>
    <relationshipLabel>Engagement Product Features</relationshipLabel>
    <relationshipName>Engagement_Product_Features</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>